# IcyBIS

./: .gitignore  .pkgmeta  .release-notes.md  .release-workflow.md  CHANGELOG.md  Makefile  README.md  project-words.txt  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: main.yml  release.yml
IcyBIS/: Functions.lua  IcyBIS.lua  IcyBIS.toc  IcyBIS_AddonCompartment.lua  IcyBIS_Functions.lua  IcyBIS_LootMessage.lua  IcyBIS_SettingsUI.lua  IcyBIS_Tooltip.lua  SettingsUI.lua  Tooltip.lua  tmp.lua
IcyBIS-Core/: IcyBIS.lua  IcyBIS.toc  IcyBIS_AddonCompartment.lua  IcyBIS_Functions.lua  IcyBIS_SettingsUI.lua  IcyBIS_SettingsUI2.lua  IcyBIS_Tooltip.lua
IcyBIS-Core/IcyBIS_Items/: DeathKnightBIS.lua  DemonHunterBIS.lua  DruidBIS.lua  EvokerBIS.lua  HunterBIS.lua  MageBIS.lua  MonkBIS.lua  PaladinBIS.lua  PriestBIS.lua  RogueBIS.lua  ShamanBIS.lua  WarlockBIS.lua  WarriorBIS.lua
IcyBIS/IcyBIS_Items/: DeathKnightBIS.lua  DemonHunterBIS.lua  DruidBIS.lua  EvokerBIS.lua  HunterBIS.lua  MageBIS.lua  MonkBIS.lua  PriestBIS.lua  RogueBIS.lua  ShamanBIS.lua  WarlockBIS.lua  WarriorBIS.lua
IcyBIS/Media/Textures/: IcyBIS-logo.blp
scripts/: makefile-help.sh  release.sh
src/icybis/: __main__.py  build.py  constants.py  soup.py  version.py
