# --------------- Build System --------------- #
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# --------------- Project --------------- #
[project]
name = "icybis"
dynamic = ["version"]
description = ""
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4",
    "html5lib",
    "requests",
    "rich",
]
authors = [
    {name = "Dillon Louden"},
]
maintainers = [
    {name = "Dillon Louden"},
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE", content-type = "text/markdown"}
keywords = [
]
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
]

# --------------- Project Optional Dependencies --------------- #
[project.optional-dependencies]
dev = [
    "hatch",
    "ruff",
]

# --------------- Project Scripts --------------- #
[project.scripts]
icybis = "icybis.__main__:main()"

# --------------- Hatch Versioning --------------- #
[tool.hatch.version]
path = "src/icybis/version.py"
pattern = '__version__: str = "(?P<version>[^"]+)"'

[tool.hatch.build.targets.wheel]
packages = ["src/icybis"]

# --------------- Ruff Global Settings --------------- #
[tool.ruff]
required-version = ">=0.5.0"
src = [
    "src",
    "test",
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py312"

# --------------- Ruff Lint Settings --------------- #
[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ARG",
    "C4",
    "COM",
    "DTZ",
    "E2",
    "E3",
    "E4",
    "E7",
    "E9",
    "F",
    "FBT",
    "G",
    "I",
    "INT",
    "N",
    "PTH",
    "Q",
    "RUF",
    "UP",
    "W",
]
ignore = [
    "COM812"
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
preview = true

# --------------- Ruff Format Settings --------------- #
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
